# supply-chain-scanner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: scan.yml
supply_chain_scanner/: __init__.py  conftest.py  test_supply_chain.py
supply_chain_scanner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
